cau truc lai folder pug va nhung file tinh

--- a/views/client/pages/topics/index.pug
+++ b/views/client/pages/topics/index.pug
@@ -1,6 +1,5 @@
-doctype html 
-html 
-    head 
-        titile Trang chu de bai hat
-    body    
-        h1 Trang chu de bai hat
+extends ../../layouts/default.pug
+include ../../mixins/box-head.pug
+
+block main
+  +box-head("Danh sách chủ đề")
