--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -4,7 +4,7 @@ header.header
       .col-3
         .inner-logo
           a(href="/")
-            img(src="/images/music-app.jpg", alt="Logo")
+            img(src="/images/logo2.webp", alt="Logo")
       .col-9
         .inner-menu
           ul
