--- a/public/css/style.css
+++ b/public/css/style.css
@@ -211,4 +211,14 @@
   font-size: 14px;
   padding: 10px 15px;
 }
+
+.singer-detail .inner-actions .inner-like.active {
+  color: #0059ff;
+}
+.singer-detail .inner-actions .inner-like.active i {
+  font-weight: 900;
+}
+
 /* End singer-detail */
+
+
