--- a/views/client/pages/songs/detail.pug
+++ b/views/client/pages/songs/detail.pug
@@ -13,9 +13,9 @@ block main
             div(class="inner-action inner-singer")
               <i class="fa-solid fa-microphone-lines"></i> #{singer.fullName}
             div(class="inner-action inner-topic")
-              <i class="fa-solid fa-music"></i> #{topic.tilte}
-            div(class="inner-action inner-like")
-              <i class="fa-regular fa-thumbs-up"></i> #{song.like} thích
+              <i class="fa-solid fa-music"></i> #{topic.title}
+            div(class="inner-action inner-like" button-like=song.id)
+              <i class="fa-regular fa-thumbs-up"></i> <span class="inner-number">#{song.like}</span> thích
             div(class="inner-action inner-heart")
               <i class="fa-regular fa-heart"></i> Bài hát yêu thích
 
